--- a/AR1/index.html
+++ b/AR1/index.html
@@ -1,25 +1,62 @@
-<html>
-	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image.prod.js"></script>
-		<script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-		<script src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/dist/mindar-image-aframe.prod.js"></script>
-	</head>
-	<body>
-		<a-scene mindar-image="imageTargetSrc: ./targets.mind; showStats: true;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
-			<a-assets>
-				<img id="card" src="assets/card.png" />
-				<a-asset-item id="avatarModel" src="assets/scene.gltf"></a-asset-item>
-			</a-assets>
-			
-			
-			<a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
-			
-			
-			<a-entity mindar-image-target="targetIndex: 0">
-				<a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
-				<a-gltf-model rotation="0 0 0 " position="0 0 0.1" scale="0.005 0.005 0.005" src="#avatarModel" animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1c2407b26c61958baa93967b5412487cd94b290b/dist/aframe-master.min.js"></script>
+<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+
+<style>
+	.arjs-loader {
+		height: 100%;
+		width: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		background-color: rgba(0, 0, 0, 0.8);
+		z-index: 9999;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+	
+	.arjs-loader div {
+		text-align: center;
+		font-size: 1.25em;
+		color: white;
+	}
+</style>
+
+<body style="margin : 0px; overflow: hidden;">
+	<!-- minimal loader shown until image descriptors are loaded -->
+	<div class="arjs-loader">
+		<div>Loading, please wait...</div>
+	</div>
+	<a-scene
+		vr-mode-ui="enabled: false;"
+		renderer="logarithmicDepthBuffer: true;"
+		embedded
+		arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;"
+		>
+		<!-- we use cors proxy to avoid cross-origin problems -->
+		
+		<!--
+		⚠️⚠️⚠️
+		https://arjs-cors-proxy.herokuapp.com/ is now offline, Heroku has dismissed all his free plans from November 2022.
+		You need to host your own proxy and use it instead. The proxy is based on CORS Anywhere (see https://github.com/Rob--W/cors-anywhere).
+		⚠️⚠️⚠️
+		-->
+		
+		<a-nft
+			type="nft"
+			url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/trex-image/trex"
+			smooth="true"
+			smoothCount="10"
+			smoothTolerance=".01"
+			smoothThreshold="5"
+			>
+			<a-entity
+				gltf-model="assets/scene.gltf"
+				scale="5 5 5"
+				position="50 150 0"
+				>
 			</a-entity>
-		</a-scene>
-	</body>
-</html>
+		</a-nft>
+		<a-entity camera></a-entity>
+	</a-scene>
+</body>
