--- a/AR1/index.html
+++ b/AR1/index.html
@@ -44,14 +44,14 @@
 		
 		<a-nft
 			type="nft"
-			url="assets/trex-image/trex"
+			url="AR1/assets/trex-image/trex"
 			smooth="true"
 			smoothCount="10"
 			smoothTolerance=".01"
 			smoothThreshold="5"
 			>
 			<a-entity
-				gltf-model="assets/scene.gltf"
+				gltf-model="AR1/assets/scene.gltf"
 				scale="5 5 5"
 				position="50 150 0"
 				>
