--- a/AR1/index.html
+++ b/AR1/index.html
@@ -10,7 +10,7 @@
 		<a-scene mindar-image="imageTargetSrc: ./targets.mind; showStats: false;" color-space="sRGB" renderer="colorManagement: true, physicallyCorrectLights" vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
 			<a-assets>
 				<img id="card" src="https://cdn.jsdelivr.net/gh/hiukim/mind-ar-js@1.1.5/examples/image-tracking/assets/card-example/card.png" crossorigin="anonymous"/>
-				<a-asset-item id="avatarModel" src="assets/scene.gltf"></a-asset-item>
+				<a-asset-item id="avatarModel" src="assets/scene3.gltf"></a-asset-item>
 			</a-assets>
 			
 			
@@ -19,7 +19,7 @@
 			
 			<a-entity mindar-image-target="targetIndex: 0">
 				<a-plane src="#card" position="0 0 0" height="0.552" width="1" rotation="0 0 0"></a-plane>
-				<a-gltf-model rotation="0 0.5 0 " position="0 0 0.1" scale="0.1 0.1 0.1" src="#avatarModel" animation="property: position; to: 0 0.1 0.1; dur: 1000; easing: easeInOutQuad; loop: true; dir: alternate">
+				<a-gltf-model rotation="0 0.5 0 " position="0 0 0.1" scale="0.1 0.1 0.1" src="#avatarModel">
 			</a-entity>
 		</a-scene>
 	</body>
